// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeView UnitTest renders correctly with mode="meridian" 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "calibre_app_semibold",
              "fontSize": 20,
            },
            {
              "color": "rgba(98, 91, 113, 1)",
            },
            undefined,
          ]
        }
      >
        8:30
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "calibre_app_regular",
              "fontSize": 20,
            },
            {
              "color": "rgba(98, 91, 113, 1)",
            },
            undefined,
          ]
        }
      >
        am
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`TimeView UnitTest renders correctly with mode="time" 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "calibre_app_semibold",
              "fontSize": 20,
            },
            {
              "color": "rgba(98, 91, 113, 1)",
            },
            undefined,
          ]
        }
      >
        2h 15m
      </Text>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
